P4-Ch.02/e-commerce/user_service/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-user
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-user
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ecommerce-user
    spec:
      containers:
      - name: ecommerce-user
        image: kowlon/go-echo:v2
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
