P4-Ch.02/e-commerce/user_service/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce_user
spec:
  selector:
    app: ecommerce_user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
